# spikee

./: .gitignore  CHANGELOG.md  CONTRIOBUTION_RULES.md  PIP_PACKAGE_RELEASE_INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
docs/: 01_builtin_datasets_and_plugins.md  01_builtin_seeds_and_datasets.md  01_cheatsheet.md  01_custom_targets.md  02_builtin.md  02_custom_plugins.md  02_dataset_generation.md  02_dataset_generation_options.md  03_buildin_targets_attacks_and_judges.md  03_builtin_targets_attacks_and_judges.md  03_custom_targets.md  03_dynamic_attacks.md  03_llm_providers.md  04_custom_plugins.md  04_custom_targets.md  04_dataset_generation.md  04_judges.md  04_llm_providers.md  05_custom_plugins.md  05_custom_targets.md  05_dynamic_attacks.md  05_interpreting_results.md  05_judges.md  05_testing.md  06_custom_plugins.md  06_custom_targets.md  06_dynamic_attacks.md  06_guardrail_testing.md  06_judges.md  06_llm_dataset_generation.md  07_custom_plugins.md  07_dynamic_attacks.md  07_guardrail_testing.md  07_judges.md  08_dynamic_attacks.md  08_guardrail_testing.md  08_interpreting_results.md  08_judges.md  08_llm_dataset_generation.md  09_guardrail_testing.md  (+12 more)
results/: results_aws_bedrock_guardrail-1734615302_guardrail-false-positive-check_1734623677_analysis.html  results_aws_bedrock_guardrail-targeted-2024-12-document_1734620371.jsonl  results_aws_bedrock_guardrail-targeted-2024-12-document_1734620371_analysis.html  results_aws_claude_35_haiku-targeted-2024-12-full-prompt-sys_1734604545.jsonl  results_aws_claude_35_sonnet-targeted-2024-12-full-prompt-sys_1734606212.jsonl  results_aws_claude_35_sonnet-targeted-2024-12-full-prompt_1734605189.jsonl  results_aws_claude_35_sonnet-targeted-2024-12-full-prompt_1734605189_analysis.html  results_az_gpt4o-targeted-2024-12-full-prompt-sys_1734525495_analysis.html  results_az_gpt4o_mini-targeted-2024-12-full-prompt-sys_1734601717.jsonl  results_az_gpt4o_mini-targeted-2024-12-full-prompt-sys_1734601717_analysis.html  results_az_gpt4o_mini-targeted-2024-12-full-prompt_1734599127_analysis.html  results_az_prompt_shields-1734615302_guardrail-false-positive-check_1734623707.jsonl  results_az_prompt_shields-1734615302_guardrail-false-positive-check_1734623707_analysis.html  results_az_prompt_shields-targeted-2024-12-document_1734615457.jsonl  results_az_prompt_shields-targeted-2024-12-document_1734615457_analysis.html  results_deepseek_v3-targeted-2024-12-full-prompt_1736153178.jsonl  results_deepseek_v3-targeted-2024-12-full-prompt_1736153178_analysis.html  results_google_gemini_15flash-targeted-2024-12-full-prompt-sys_1734607348_analysis.html  results_google_gemini_15flash-targeted-2024-12-full-prompt_1734607492_analysis.html  results_google_gemini_15pro-targeted-2024-12-full-prompt-sys_1734608712.jsonl  results_google_gemini_15pro-targeted-2024-12-full-prompt-sys_1734608712_analysis.html  results_google_gemini_15pro-targeted-2024-12-full-prompt_1734607692.jsonl  results_google_gemini_15pro-targeted-2024-12-full-prompt_1734607692_analysis.html  results_google_gemini_exp_1206-targeted-2024-12-full-prompt-sys_1734815369.jsonl  results_injec_guard-1734615302_guardrail-false-positive-check_1734624847_analysis.html  results_injec_guard-targeted-2024-12-document_1734624966.jsonl  results_openai_o1-mini-targeted-2024-12-full-prompt_1734611340.jsonl  results_openai_o1-preview-targeted-2024-12-full-prompt-sys_1737536848.jsonl  results_openai_o1-preview-targeted-2024-12-full-prompt_1734786001.jsonl  results_prompt_guard_injection-1734615302_guardrail-false-positive-check_1734782720.jsonl  results_prompt_guard_injection-1734615302_guardrail-false-positive-check_1734782720_analysis.html  results_prompt_guard_injection-targeted-2024-12-document_1734782669_analysis.html  results_prompt_guard_jailbreak-1734615302_guardrail-false-positive-check_1734782734.jsonl  results_prompt_guard_jailbreak-1734615302_guardrail-false-positive-check_1734782734_analysis.html  results_prompt_guard_jailbreak-targeted-2024-12-document_1734782626.jsonl  results_prompt_guard_jailbreak-targeted-2024-12-document_1734782626_analysis.html  (+18 more)
spikee/: ai_dataset_builder.py  cli.py  judge.py  (+6 more)
(+250 files in other folders)
