[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "spikee"
version = "0.6.1"
description = "Spikee - Simple Prompt Injection Kit for Evaluation and Exploitation"
readme = "README.md"
keywords = [ "prompt-injection", "LLM", "cyber-security", "pentesting",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent",]
dependencies = [ "tqdm", "rich", "six", "openai", "huggingface_hub", "datasets", "litellm", "tabulate", "flask", "jinja2", "pandas", "openpyxl", "boto3", "azure-ai-inference", "python-dotenv", "azure-ai-contentsafety", "InquirerPy", "fpdf", "python-docx", "tomli; python_version < '3.11'", "filelock"]
[[project.authors]]
name = "Reversec"
email = "donato.capitella@reversec.com"

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
huggingface = []

[project.scripts]
spikee = "spikee.cli:main"

[tool.setuptools.package-data]
spikee = [ "data/**/*",]

[tool.setuptools.packages.find]
include = [ "spikee*",]
exclude = [ "datasets*", "results*", "targets*", "plugins*", "attacks*", "judges*", "templates*", "utilities*",]
